<resources>
    <string name="app_name">Samu</string>
    <string name="title_home">Ana Sayfa</string>
    <string name="title_dashboard">Arkdaşlar</string>
    <string name="title_notifications">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="giri_yap">Giriş Yap</string>
    <string name="parola">Parola</string>
    <string name="e_mail">E-mail</string>
    <string name="textview">TextView</string>


    <string name="ad">ad</string>
    <string name="cinsiyet">cinsiyet</string>
    <string name="erkek">erkek</string>
    <string name="kadın">kadın</string>
    <string name="dtarihi">Doğum Tarihi</string>
    <string name="tel">Tel</string>
    <string name="kayıt_ol">Kayıt Ol</string>
    <string name="sohbet">Sohbete Başla</string>
    <string name="rast">Rastgele</string>
    <string name="özel">Özelleştir</string>
    <string name="ark">Arkdaşlar</string>
    <string name="çevrimiçi">Çevrimiçi</string>
    <string name="isim">Ad Soyad</string>
    <string name="mesaj">Mesaj Giriniz</string>
    <string name="KULLANICI">KULLANICI</string>
    <string name="gmail">Kullanıcı@gmail.com</string>
    <string name="Hesap_Ayarları">Hesap Ayarları</string>
    <string name="Profil_Ayarları">Profil Ayarları</string>
    <string name="Gizlilik_Ayarları">Gizlilik Ayarları</string>
    <string name="Bildirim_Ayarları">Bildirim Ayarları</string>
    <string name="kaydet">Kaydet</string>

    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="hakkımızda">Hakkımızda</string>
</resources>