<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color3"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/button"
        android:layout_width="277dp"
        android:layout_height="263dp"
        android:layout_marginTop="@dimen/üst3"
        android:backgroundTint="@color/color2"
        android:text="@string/sohbet"
        android:textColor="#A6A6A6"
        app:cornerRadius="200dp"
        app:icon="@drawable/speech_bubble"
        app:iconGravity="textTop"
        app:iconPadding="1dp"
        app:iconSize="215dp"
        app:iconTint="#A6A6A6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color2"
        android:foregroundTint="#FFFFFF"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="158dp"
        android:layout_height="64dp"
        android:layout_marginStart="@dimen/sol3"
        android:layout_marginTop="@dimen/alt"
        android:layout_marginEnd="@dimen/sağ2"
        android:layout_marginBottom="@dimen/alt"
        android:backgroundTint="@color/color4"
        android:text="@string/rast"
        app:icon="@drawable/random"
        app:iconGravity="textStart"
        app:iconSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="158dp"
        android:layout_height="64dp"
        android:layout_marginTop="@dimen/alt"
        android:layout_marginEnd="@dimen/sağ3"
        android:layout_marginBottom="@dimen/alt"
        android:backgroundTint="@color/color4"
        android:text="@string/özel"
        app:icon="@drawable/gears"
        app:iconSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.518"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>