<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color3"
    tools:context=".ui.dashboard.DashboardFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ark"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/searchView"
        app:layout_constraintEnd_toStartOf="@+id/searchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchView" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="143dp"
        android:layout_height="24dp"
        android:layout_marginTop="@dimen/üst3"
        android:layout_marginEnd="@dimen/sağ3"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName4"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName4"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName7"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName7" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="105dp"
        android:layout_height="87dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/color2"
        app:cornerRadius="300dp"
        app:icon="@drawable/speech_bubble"
        app:iconSize="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName4"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName4"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/color2"
        app:cornerRadius="300dp"
        app:icon="@drawable/speech_bubble"
        app:iconSize="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName7"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName7"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="105dp"
        android:layout_height="87dp"
        android:layout_marginTop="@dimen/üst3"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
</androidx.constraintlayout.widget.ConstraintLayout>